--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "tailwindcss": "^3.1.5"
   },
   "scripts": {
-    "tailwind": "npx tailwindcss -i assets/css/input.css -o assets/css/output.css --watch"
+    "css": "npx tailwindcss -i assets/css/input.css -o assets/css/output.css -w"
   }
 }
