--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   },
   "scripts": {
     "watch": "npx mix watch",
-    "css": "npx tailwindcss -i assets/css/input.css -o assets/css/output.css -w",
-    "css-directors": "npx tailwindcss -i assets/css/directors-input.css -o assets/css/directors-output.css -w",
-    "css-home": "npx tailwindcss -i assets/css/home-input.css -o assets/css/home-output.css -w"
+    "css-directors": "npx tailwindcss -i assets/css/directors-input.css -o assets/css/directors-output.css -w"
   },
   "devDependencies": {
     "laravel-mix": "^6.0.49"
