Move directors.css

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/assets/css/directors.css": "/assets/css/directors.css",
     "/assets/css/home.css": "/assets/css/home.css",
     "/assets/css/main.css": "/assets/css/main.css",
     "/assets/css/about.css": "/assets/css/about.css"
